--- a/platformio.ini
+++ b/platformio.ini
@@ -2,12 +2,13 @@
 platform = ststm32@13.0.0
 board = genericSTM32F103C8
 framework = arduino
-upload_protocol = stlink
-debug_tool = stlink
+upload_protocol = jlink
+debug_tool = jlink
 build_flags_cdc =
     -DUSBCON
     -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 lib_ignore = Servo_Pico
+monitor_dtr = 1
 
 # The idea here was to make a CDC version with debugging info
 # and an env to build as a HID joystick, but turns out it
