--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,7 @@
 [env_common_stm32]
-platform = ststm32@13.0.0
-board = genericSTM32F103C8
+platform = ststm32
+#@13.0.0
+board = blackpill_f401ce
 framework = arduino
 upload_protocol = jlink
 debug_tool = jlink
@@ -18,15 +19,7 @@ extends = env_common_stm32
 build_flags = ${env_common_stm32.build_flags_cdc}
     -DTARGET_BLUEPILL
 
-[env:CC3D]
-extends = env_common_stm32
-build_flags = ${env_common_stm32.build_flags_cdc}
-   -DTARGET_CC3D
 
-[env:PURPLEPILL]
-extends = env_common_stm32
-build_flags = ${env_common_stm32.build_flags_cdc}
-   -DTARGET_PURPLEPILL
 
 # The build flag ARMSWITCH expects a value of 2000 (armed) or 1000 (disarmed)
 # on channel 5. As long as the controller does not send the "armed" state,
